# iot-pet-feeder

./: .codacy.yml  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_ANALYSIS.md  LICENSE  Makefile  PROJECT_GUIDELINES.md  README.md  amplify.yml  coverage-python.xml  pyproject.toml
.codacy/: codacy.yaml
.github/workflows/: backend-ci.yml  ci.yml
app/api/v1/routes/: feed.py  schedule.py
app/crud/: feed.py
app/services/: feed_service.py
backend/: .coveragerc  .ruff.toml  cleanup_invalid_events.py  coverage.lcov  create_admin_user.py  data_seeder.py  demo_data_roller.py  deploy_lambda.sh  deploy_via_terraform.sh  feed_event_logger.py  feed_notifier.py  fix_initiated_events.py  fix_weight_data.py  lambda_handler.py  migrate_feed_history.py  pre_sign_up_handler.py  requirements-dev.txt  requirements.txt  schedule_executor.py  seed_demo_data.py  status_updater.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  exceptions.py  hardware_adapter.py  iot.py  jwt_verifier.py  serialization.py
backend/app/crud/: config.py  feed.py  schedule.py
backend/app/db/: client.py
backend/app/models/: config.py  feed.py  schedule.py
backend/app/services/: feed_service.py
backend/tests/: conftest.py  test_api_routes.py  test_auth.py  test_config_routes.py  test_cors_config.py  test_crud_config.py  test_crud_feed.py  test_crud_schedule.py  test_db_client.py  test_exceptions.py  test_feed_event_logger.py  test_feed_notifier.py  test_feed_routes.py  test_feed_service.py  test_hardware_adapter.py  test_iot.py  test_jwt_verifier.py  test_models.py  test_notifications_routes.py  test_schedule_executor.py  test_schedule_models.py  test_schedule_routes.py  test_schedule_timezone.py  test_status_routes.py  test_status_updater.py  test_users_routes.py
docs/architecture/: iot-pet-feeder.drawio
docs/diagrams/: iot-pet-feeder.drawio.xml
firmware/esp32-feeder/: iot-pet-feeder.ino
firmware/esp32-feeder/iot-pet-feeder/: iot-pet-feeder.ino  secrets.h.example
frontend/web-control-panel/: amplify.yml  eslint.config.js  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
frontend/web-control-panel/e2e/: app.spec.js
frontend/web-control-panel/public/: admin.html  docs.html  env-config.js  index.html  login.html  redoc.html  schedules.html  settings.html
frontend/web-control-panel/public/css/: style.css
frontend/web-control-panel/public/js/: admin.js  auth.js  dom-utils.js  error-handler-init.js  error-handler.js  focus-trap.js  index.js  login.js  main.js  schedules.js  settings.js  tailwind-config.js  theme-init.js  (+3 more)
frontend/web-control-panel/tests/: auth.test.js  dom-utils.test.js  error-handler.test.js  focus-trap.test.js  schedules.test.js  settings.test.js  tailwind-config.test.js  theme-init.test.js  theme.test.js  timezone-utils.test.js  validation-utils.test.js
infra/scripts/: generate-esp32-config.sh  post-deploy.sh  setup.sh  setup_tf_backend.sh  validate.sh
(+45 files in other folders)
